--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white header_top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="https://i.ibb.co/MctxhVy/logo.jpg" alt=""></a>
+          <a class="navbar-brand" href="#"><img class="py-2" src="https://i.ibb.co/MctxhVy/logo.jpg" alt=""></a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
