--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
 
       <div class="footer_section">
           <div class="row">
-              <div class="col bg-black text-center">
-                  <p class="mb-0 text-white py-3">Copyright &copy; 2021 Designed by LFWF. All right reserved.</p>
+              <div class="col text-center">
+                  <p class="mb-0 text-white py-4">Copyright &copy; 2021 Designed by LFWF. All right reserved.</p>
               </div>
           </div>
       </div>
